[gd_scene load_steps=2 format=3 uid="uid://register_dialog"]

[ext_resource type="Script" path="res://scenes/ui/dialogs/RegisterDialog.gd" id="1_register"]

[node name="RegisterDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_register")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -260.0
offset_right = 420.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TopBar" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "✖"

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Kayıt Ol"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EmailInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "E-posta"
theme_override_font_sizes/font_size = 20
max_length = 254

[node name="UsernameInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Kullanıcı Adı"
theme_override_font_sizes/font_size = 20
max_length = 40

[node name="PasswordInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Şifre"
secret = true
theme_override_font_sizes/font_size = 20

[node name="ConfirmPasswordInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Şifre (Tekrar)"
secret = true
theme_override_font_sizes/font_size = 20

[node name="ReferralInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
placeholder_text = "Davetiye Kodu (Opsiyonel)"
theme_override_font_sizes/font_size = 18

[node name="StatusLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RegisterButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Kayıt Ol"
theme_override_font_sizes/font_size = 20

[node name="CancelButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "İptal"
theme_override_font_sizes/font_size = 20
